feat: Make scratch persistent
I use it for notes, and it sometimes sucks to lose them.  Let's just keep them.

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,17 @@
-auto-save-list
-elpa
-projectile-bookmarks.eld
-recentf
-transient
 custom.el
-cider-history
 .emacs.d
 .cache
-.lsp-session-v1
-projects
+elpa
 eshell/
 url/
+recentf
+transient
+auto-save-list
+projects
+projectile-bookmarks.eld
+.lsp-session-v1
+cider-history
+.persistent-scratch
 straight/*
 !straight/versions
 straigh/versions/*
