feat: Add multi-cursor
I just keep finding stuff I need that I didn't realize I used.  This allows
having multiple cursors in emacs.  You highlight a word, and then hit cmd-option
and the arrow keys to create cursors on all words that match.  All the cursors
can type, and away you go.  cmd-g gets you out.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ projectile-bookmarks.eld
 .lsp-session-v1
 cider-history
 .persistent-scratch
+.mc-lists.el
 straight/*
 !straight/versions
 straigh/versions/*
