feat: added eln-cache to .gitignore
When I upgraded to emacs 29, it added this directory, which I want to ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ projectile-bookmarks.eld
 cider-history
 .persistent-scratch
 .mc-lists.el
+eln-cache/
 straight/*
 !straight/versions
 straigh/versions/*
