feat: add dap-mode
This doesn't really configure dap-mode, but it pulls the config in.  I will get
it working as I go.  I just wanted to get it in here so I could remember why I
am using lsp-mode instead of eglot (eglot has no debugger and can only run one
lsp mode at a time).

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ projectile-bookmarks.eld
 cider-history
 .persistent-scratch
 .mc-lists.el
+.dap-breakpoints
 eln-cache/
 straight/*
 !straight/versions
